# solar-system

./: Cargo.toml  README.md
resources/shaders/: TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader
src/: lib.rs  main.rs  object.rs  shaders.rs  texture.rs
