[package]
name = "solar-system"
version = "0.1.0"
authors = ["Otávio Pace <otaviopp8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.6"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
