[package]
name = "solar-system"
version = "0.1.0"
authors = ["Otávio Pace <otaviopp8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.35.0"
glm = "0.2.3"
stb_image = "0.2.2"
lazy_static = "1.4.0"
